[package]
name        = "mito-reth-evm"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["node"]
node    = ["reth-ethereum/node", "dep:eyre"]
rocksdb = []

[dependencies]
mito-reth-primitives = { path = "../primitives" }

# reth
reth-ethereum            = { workspace = true, features = ["node-api"] }
reth-evm.workspace       = true
reth-chainspec.workspace = true
reth-ethereum-primitives.workspace = true
reth-primitives-traits.workspace = true

# alloy
alloy-evm.workspace      = true
alloy-primitives.workspace = true
alloy-consensus.workspace = true
alloy-eips.workspace      = true
alloy-rpc-types-engine.workspace = true

# revm
revm.workspace = true

eyre = { workspace = true, optional = true }

[dev-dependencies]
reth-e2e-test-utils.workspace = true
reth-node-ethereum.workspace = true
reth-tracing.workspace = true
reth-chainspec.workspace = true
reth-node-core.workspace = true

alloy-primitives       = { workspace = true }
alloy-rpc-types-eth    = { version = "1.7.3", default-features = false, features = ["std"] }

reth-payload-builder.workspace = true
jsonrpsee              = { version = "0.26", features = ["http-client"] }
alloy-signer-local     = { version = "1.7.3", default-features = false, features = ["mnemonic"] }
alloy-network          = { version = "1.7.3" }
tokio                  = { workspace = true }
serde_json             = "1"
eyre.workspace         = true
